--- a/index.html
+++ b/index.html
@@ -1,7 +1,19 @@
 <!DOCTYPE html>
 <html>
-<body>
-<script src="js/main.js"></script>
-<input type="file">
-</body>
+<style>
+  .thumb {
+    height: 75px;
+    border: 1px solid #000;
+    margin: 10px 5px 0 0;
+  }
+</style>
+
+<input type="file" id="files" name="files[]" multiple />
+<output id="list"></output>
+
+
+<script src="js/jquery-3.2.1.min.js"></script>
+<script src="js/main.js">
+</script>
+
 </html>
